--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-portal",
-  "homepage": "https://myusername.github.io",
+  "homepage": "https://ParthRadia-2000.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,6 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
