--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-portal",
-  "homepage": "https://ParthRadia-2000.github.io/",
+  "homepage": "https://ParthRadia-2000.github.io/jobportal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
